<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detail.DetailAnimeActivity"
    android:layout_marginTop="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_anime_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/anime_information"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_detail_star"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/anime_rating"
            android:src="@drawable/ic_star_outline_black"
            app:layout_constraintStart_toStartOf="@id/tv_anime_info"
            app:layout_constraintTop_toBottomOf="@id/tv_anime_info" />

        <TextView
            android:id="@+id/tv_detail_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/img_detail_star"
            app:layout_constraintStart_toEndOf="@id/img_detail_star"
            app:layout_constraintTop_toTopOf="@id/img_detail_star"
            tools:text="10.00" />

        <TextView
            android:id="@+id/tv_detail_scoring_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/img_detail_star"
            app:layout_constraintStart_toEndOf="@id/tv_detail_score"
            tools:text="(10.000 users)" />

        <TextView
            android:id="@+id/tv_detail_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/img_detail_star"
            app:layout_constraintEnd_toEndOf="@id/tv_anime_info"
            app:layout_constraintTop_toTopOf="@id/img_detail_star"
            tools:text="Ranked #1" />

        <TextView
            android:id="@+id/tv_detail_label_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/type"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/img_detail_star"
            app:layout_constraintTop_toBottomOf="@id/img_detail_star" />

        <TextView
            android:id="@+id/tv_detail_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            tools:text="TV"
            app:layout_constraintEnd_toEndOf="@id/tv_anime_info"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/img_detail_star" />

        <TextView
            android:id="@+id/tv_detail_label_episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/episodes"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_detail_label_type"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_type" />

        <TextView
            android:id="@+id/tv_detail_episodes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            tools:text="12"
            app:layout_constraintEnd_toEndOf="@id/tv_anime_info"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_type" />

        <TextView
            android:id="@+id/tv_detail_label_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/status"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_detail_label_episodes"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_episodes" />

        <TextView
            android:id="@+id/tv_detail_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            tools:text="Finished"
            app:layout_constraintEnd_toEndOf="@id/tv_anime_info"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_episodes" />

        <TextView
            android:id="@+id/tv_detail_label_premiered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/premiered"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_detail_label_status"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_status" />

        <TextView
            android:id="@+id/tv_detail_premiered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            tools:text="Winter 2024"
            app:layout_constraintEnd_toEndOf="@id/tv_anime_info"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_status" />

        <TextView
            android:id="@+id/tv_detail_label_studios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/studios"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_detail_label_premiered"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_premiered" />

        <TextView
            android:id="@+id/tv_detail_studios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            tools:text="Anime Studio"
            app:layout_constraintEnd_toEndOf="@id/tv_anime_info"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_premiered" />

        <TextView
            android:id="@+id/tv_detail_label_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/source"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_detail_label_studios"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_studios" />

        <TextView
            android:id="@+id/tv_detail_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            tools:text="Manga"
            app:layout_constraintEnd_toEndOf="@id/tv_anime_info"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_studios" />

        <TextView
            android:id="@+id/tv_detail_label_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/genres"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_detail_label_source"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_source" />

        <TextView
            android:id="@+id/tv_detail_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            tools:text="Action"
            app:layout_constraintEnd_toEndOf="@id/tv_anime_info"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_source" />

        <TextView
            android:id="@+id/tv_detail_label_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/duration"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_detail_label_genres"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_genres" />

        <TextView
            android:id="@+id/tv_detail_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            tools:text="23 min. per ep."
            app:layout_constraintEnd_toEndOf="@id/tv_anime_info"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_genres" />

        <TextView
            android:id="@+id/tv_detail_label_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/rating"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_detail_label_duration"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_duration" />

        <TextView
            android:id="@+id/tv_detail_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            tools:text="R-17+"
            app:layout_constraintEnd_toEndOf="@id/tv_anime_info"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_duration" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="120dp" />

        <TextView
            android:id="@+id/tv_detail_label_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/synopsis"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_anime_info"
            app:layout_constraintStart_toStartOf="@id/tv_anime_info"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_label_rating" />

        <TextView
            android:id="@+id/tv_detail_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            tools:text="@tools:sample/lorem/random"
            app:layout_constraintEnd_toEndOf="@id/tv_detail_label_synopsis"
            app:layout_constraintStart_toStartOf="@id/tv_detail_label_synopsis"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_label_synopsis" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>